@@ -1,4 +1,5 @@
-@comment $NetBSD: PLIST,v 1.2 2004/03/02 10:57:13 seb Exp $
+@comment $NetBSD: PLIST,v 1.3 2004/06/20 18:48:44 xtraeme Exp $
+bin/make_win_binary_distribution
 bin/make_win_src_distribution
 bin/msql2mysql
 bin/mysql
