@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.6 2004/05/14 10:53:29 grant Exp $
+# $NetBSD: Makefile,v 1.7 2004/06/20 18:48:44 xtraeme Exp $
 
 PKGNAME=		${DISTNAME:S/-/-server-/}
-PKGREVISION=		2
 SVR4_PKGNAME=		mysqs
 COMMENT=		MySQL 4, a free SQL database (server)
 
