@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.1840 2004/06/20 18:43:26 xtraeme Exp $
+$NetBSD: TODO,v 1.1841 2004/06/20 18:48:44 xtraeme Exp $
 
 Suggested new packages
 ======================
@@ -319,7 +319,6 @@ Suggested package updates
 	o mrproject-0.9.1
 	o multi-gnome-terminal-1.6.2
 	o multitail-3.2.1
-	o mysql-4.0.20 [xtraeme]
 	o namazu-2.0.13
 	o nano-1.2.3
 	o nap-1.5.2
